--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2254,18 +2254,39 @@ img::before {
 	(e.g. https://gwern.net/lorem-block#interviews )
  */
 
+/*	Interview.
+ */
 blockquote.interview ul {
-	--list-left-padding: 0em;
-	--text-indent: 2.5em;
+	--list-left-padding: 1.5em;
 }
 
-blockquote.interview ul li::before {
+/*	Exchanges.
+ */
+blockquote.interview li.exchange ul {
+	--list-left-padding: 1.75em;
+	--text-indent: 2em;
+}
+blockquote.interview li.exchange::before {
+	left: 0;
+}
+
+/*	Utterances.
+ */
+blockquote.interview li.utterance {
+	text-indent: calc(-1 * var(--list-left-padding));
+}
+blockquote.interview li.utterance::before {
 	display: none;
 }
 
+/*	Speakers.
+ */
 blockquote.interview .speaker {
 	font-variant-caps: small-caps;
 	letter-spacing: -0.25px;
+	display: inline-block;
+	min-width: calc(var(--list-left-padding) - 1ch);
+	margin-right: 1ch;
 }
 
 /*****************************************************/
@@ -2459,18 +2480,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5392,14 +5413,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5532,7 +5553,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5959,14 +5980,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6847,7 +6868,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686168970#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686183233#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7353,7 +7374,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686168970#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686183233#circle-notch-solid');
 
     pointer-events: none;
 }
