--- a/css/links.css
+++ b/css/links.css
@@ -22,7 +22,7 @@
     z-index: -1;
 }
 .has-content:not(.has-indicator-hook) .indicator-hook {
-	display: none;
+    display: none;
 }
 
 .has-content .indicator-hook::before {
@@ -52,10 +52,10 @@
     background-repeat: no-repeat;
 }
 
-/*	Dotted underlines for annotated links.
+/*  Dotted underlines for annotated links.
  */
 .markdownBody a.has-annotation {
-	--link-underline-background-image: var(--GW-dotted-underline-background-image);
+    --link-underline-background-image: var(--GW-dotted-underline-background-image);
 
     background-image: var(--link-underline-background-image);
     background-size: 2px 1px;
@@ -64,16 +64,16 @@
     --link-underline-background-image: var(--GW-dotted-underline-hover-background-image);
 }
 .markdownBody a.has-annotation.decorate-not {
-	background-image: none;
+    background-image: none;
 }
 
-/*	Reversed link colors.
+/*  Reversed link colors.
  */
 .markdownBody .colors-invert a.has-annotation {
-	--link-underline-background-image: var(--GW-dotted-underline-inverted-background-image);
+    --link-underline-background-image: var(--GW-dotted-underline-inverted-background-image);
 }
 .markdownBody .colors-invert a.has-annotation:hover {
-	--link-underline-background-image: var(--GW-dotted-underline-inverted-hover-background-image);
+    --link-underline-background-image: var(--GW-dotted-underline-inverted-hover-background-image);
 }
 
 .markdownBody .colors-invert a[data-link-icon-type='svg'] .link-icon-hook::after {
@@ -1032,7 +1032,7 @@ a[data-link-icon='laion'] .link-icon-hook::after {
     --link-icon-size: 0.7em;
     --link-icon-offset-y: 0.1em;
 
-    opacity: 0.7;
+    opacity: 0.65;
 }
 
 a[data-link-icon='tex'] .link-icon-hook::after { /* TeX logotype (actually uses Source Serif) */
@@ -1040,6 +1040,12 @@ a[data-link-icon='tex'] .link-icon-hook::after { /* TeX logotype (actually uses 
     --link-icon-offset-x: 0.05em;
 
     opacity: 0.8;
+}
+
+a[data-link-icon='scholarpedia'] .link-icon-hook::after {
+    --link-icon-size: 0.80em;
+    --link-icon-offset-x: 0.05em;
+    opacity: 1.0;
 }
 
 /*=------------------=*/
