--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2256,32 +2256,31 @@ img::before {
 
 /*	Interview.
  */
-blockquote.interview ul {
+ul.interview {
 	--list-left-padding: 1.5em;
 }
 
 /*	Exchanges.
  */
-blockquote.interview li.exchange ul {
+ul.interview li.exchange ul {
 	--list-left-padding: 1.75em;
-	--text-indent: 2em;
 }
-blockquote.interview li.exchange::before {
+ul.interview li.exchange::before {
 	left: 0;
 }
 
 /*	Utterances.
  */
-blockquote.interview li.utterance {
+ul.interview li.utterance {
 	text-indent: calc(-1 * var(--list-left-padding));
 }
-blockquote.interview li.utterance::before {
+ul.interview li.utterance::before {
 	display: none;
 }
 
 /*	Speakers.
  */
-blockquote.interview .speaker {
+ul.interview .speaker {
 	font-variant-caps: small-caps;
 	letter-spacing: -0.25px;
 	display: inline-block;
@@ -2480,18 +2479,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5413,14 +5412,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5553,7 +5552,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5980,14 +5979,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6868,7 +6867,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686183233#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686199359#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7374,7 +7373,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686183233#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686199359#circle-notch-solid');
 
     pointer-events: none;
 }
