--- a/css/default.css
+++ b/css/default.css
@@ -4224,8 +4224,9 @@ body.lorem div[class^='drop-cap'] {
 /*└─────────────┘*/
 
 .popup-body {
+	--line-height: 1.5;
+
     font-size: 0.9em;
-    line-height: 1.50;
 }
 
 /*┌─────────────────┐*/
@@ -4264,8 +4265,9 @@ body.lorem div[class^='drop-cap'] {
 }
 
 .popup.zoomed.full .popframe-content-view {
+	--line-height: 1.6;
+
     font-size: 1em;
-    line-height: 1.60;
 }
 
 .popup.object.zoomed .popframe-content-view,
