Fix admonition styling bug in Firefox

--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2477,6 +2477,7 @@ p.intro-graf::first-line {
     box-sizing: border-box;
     background-origin: content-box;
     background-clip: content-box;
+    background-repeat: no-repeat;
 }
 
 .admonition.tip::before {
