--- a/css/default.css
+++ b/css/default.css
@@ -1414,6 +1414,7 @@ p.intro-graf::first-line {
     box-sizing: border-box;
     background-origin: content-box;
     background-clip: content-box;
+    background-repeat: no-repeat;
 }
 
 .admonition.tip::before {
