--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2477,21 +2477,22 @@ p.intro-graf::first-line {
     box-sizing: border-box;
     background-origin: content-box;
     background-clip: content-box;
+    background-repeat: no-repeat;
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5419,14 +5420,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5559,7 +5560,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5986,14 +5987,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6874,7 +6875,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686596570#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686597001#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7380,7 +7381,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686596570#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686597001#circle-notch-solid');
 
     pointer-events: none;
 }
