--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2321,18 +2321,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -3763,6 +3763,10 @@ section.footnotes .footnote-self-link {
 
 .markdownBody .margin-notes-block {
 	text-align: center;
+}
+
+.markdownBody .margin-notes-block.hidden {
+	display: none;
 }
 
 .markdownBody .margin-notes-block .marginnote:nth-last-child(n+2)::after {
@@ -5274,14 +5278,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5414,7 +5418,7 @@ body.lorem div[class^='drop-cap'] {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5841,14 +5845,14 @@ body.lorem div[class^='drop-cap'] {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6729,7 +6733,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1686848326#question');
+    background-image: url('/static/img/icon/icons.svg?v=1686848963#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7235,7 +7239,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1686848326#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1686848963#circle-notch-solid');
 
     pointer-events: none;
 }
