--- a/template/default.html
+++ b/template/default.html
@@ -128,11 +128,11 @@
               $if(author)$ <span class="page-author" title="Author of this page.">by: <em>$author$</em></span>$endif$
               <span class="page-date-range"><span class="page-creation" title="Date page contents were begun."><em>$created$</em></span>–<span class="page-source"><a title="Link to latest revision of the raw Markdown text source for this page, '$title$': $url$.page" class="icon-not" href="$url$.page"><span class="page-modified" title="Date of last major modification to this page."><em>$modified$</em></span></a></span></span>
               <span class="page-status" title="Writing status of current page: ranges 'abandoned'/'notes'/'draft'/'in progress'/'finished'"><em>$status$</em></span>
-              <span class="page-confidence"><a href="/about#confidence-tags" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')" class="icon-not">certainty</a>: <em>$confidence$</em></span>
-              <span class="page-importance"><a href="/about#importance-tags" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world." class="icon-not">importance</a>: <em>$importance$</em></span>
-              $if(backlinksYes)$<span class="backlinks"><a class="backlinks" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="icon-not">backlinks</a></span>$endif$
-              $if(similarsYes)$<span class="similars"><a class="similars" href="#similars" title="Similar links for this link (by text embedding)." class="icon-not">similar</a></span>$endif$
-              $if(linkbibYes)$<span class="link-bibliography"><a href="#link-bibliography" title="Bibliography of links cited in this page (forward citations)." class="icon-not">bibliography</a></span>$endif$
+              <span class="page-confidence"><a href="/about#confidence-tags" class="icon-not" title="Explanation of 'confidence' metadata: probability of overall being meaningfully correct, expressed as Kesselman Estimative Words (ranging 0–100%: 'certain'/'highly likely'/'likely'/'possible'/'unlikely'/'highly unlikely'/'remote'/'impossible')">certainty</a>: <em>$confidence$</em></span>
+              <span class="page-importance"><a href="/about#importance-tags" class="icon-not" title="Explanation of 'importance' metadata: rating 1–10 about how much a topic matters to the world.">importance</a>: <em>$importance$</em></span>
+              $if(backlinksYes)$<span class="backlinks"><a class="backlinks icon-not" href="#backlinks" title="Reverse citations/backlinks for this page (the list of other pages which link to this page).">backlinks</a></span>$endif$
+              $if(similarsYes)$<span class="similars"><a class="similars icon-not" href="#similars" title="Similar links for this link (by text embedding).">similar</a></span>$endif$
+              $if(linkbibYes)$<span class="link-bibliography"><a href="#link-bibliography" class="icon-not" title="Bibliography of links cited in this page (forward citations).">bibliography</a></span>$endif$
           </div>
         </div>
         $endif$
