--- a/css/initial.css
+++ b/css/initial.css
@@ -1466,13 +1466,16 @@ figcaption {
     margin: auto;
     padding: 0.25em 0.5em calc(0.25em + 1px) 0.5em;
     width: fit-content;
-    text-align: center;
 	background-color: var(--background-color);
 }
 @media all and (max-width: 649px) {
     figcaption {
         font-size: 0.875em;
     }
+}
+
+.markdownBody figcaption p {
+    text-align: center;
 }
 
 figcaption strong {
