--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1044,6 +1044,12 @@ section.level6 > .heading {
 /*= Misc. styling in headings =*/
 /*=---------------------------=*/
 
+/*	No link underlining in headings.
+ */
+.markdownBody .heading a {
+    background: none;
+}
+
 /*	Disable bold within headings.
  */
 .heading strong {
@@ -1510,6 +1516,79 @@ figure.width-full {
     position: relative;
     max-width: unset;
     clear: both;
+}
+
+
+/****************/
+/* MARGIN NOTES */
+/****************/
+/* display inline on mobile/narrow windows; on sufficiently-wide screens, pop out as number-less sidenotes */
+
+.marginnote {
+    /* bolding turns out to be too obtrusive for users' liking; italicized both inline & popped-out */
+    font-style: italic;
+    color: var(--GW-body-text-color);
+    font-family: var(--GW-serif-font-stack);
+}
+.marginnote.inline {
+    color: inherit;
+}
+#markdownBody .marginnote.sidenote {
+	--text-hyphenation: none;
+
+    display: flex;
+    justify-content: right;
+    width: calc(50vw - (var(--GW-body-max-width) / 2 + 96px));
+    max-width: var(--GW-sidenotes-max-width);
+    right: calc(100% + 64px);
+    left: unset;
+
+    /*  We inherit left and right padding from .sidenote class. */
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+
+    font-size: calc(var(--GW-body-text-font-size) * 0.85);
+    text-align: left;
+    opacity: 0.85;
+    z-index: 1;
+}
+#markdownBody .marginnote.sidenote .marginnote-inner-wrapper {
+    display: block;
+    width: fit-content;
+}
+
+#markdownBody .marginnote.sidenote:hover {
+    box-shadow: none;
+}
+/* make links in margin notes (somewhat unusual but should be supported simply because that's what one would expect) clickable/hover-able */
+#markdownBody .marginnote.sidenote::after {
+    z-index: -1;
+}
+
+/*  Margin notes within admonitions need special layout.
+    This is based on the width of the admonition icon area.
+    */
+#markdownBody .admonition .marginnote.sidenote {
+    width: calc(50vw - ((var(--GW-body-max-width) + (2.875em / (0.85/0.875)))/2 + 96px));
+    right: calc(var(--GW-body-max-width) + (2.875em / (0.85/0.875)) + 64px);
+}
+
+/*******************************************/
+/*	Margin note blocks at start of sections.
+ */
+
+.markdownBody .margin-notes-block {
+	text-align: center;
+}
+
+.markdownBody .margin-notes-block.hidden {
+	display: none;
+}
+
+.markdownBody .margin-notes-block .marginnote:nth-last-child(n+2)::after {
+	content: "•";
+	margin: 0 0.75em;
+	opacity: 0.5;
 }
 
 
